--- a/Preliminary_Files/Problem_statement.ipynb
+++ b/Preliminary_Files/Problem_statement.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "44cd5b29-cd04-4ca6-aae4-01def44664c3",
+   "cell_type": "markdown",
+   "id": "569e571b-e8f0-4cb7-931b-378dcfed4762",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Problem Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acb269d5-7f25-4b6f-9246-90405cd14ced",
+   "metadata": {},
+   "source": [
+    "The goal of this project is to model and optimize a hypothetical *Komagataella phaffii* strain for the production of malonic acid. *K phaffii* does not natively produce malonic acid, thus the enzymes responsible for the missing metabolic steps need to be introduced in the strain. The genes will be integrated into the metabolic model \\[placeholder model\\], previously described by \\[placeholder author\\]. The strain will be optimized for growth on \\[placholder substrate\\] as a cheap substrate. Finally, as *K phaffii* has the tendency to invest resources into growth rather than production of secondary metabolites, through the knockout of competing, non-vital pathways we will try to optimize the metabolic flux towards the product, while maintaining growth rate at a reasonable level."
+   ]
   }
  ],
  "metadata": {
