Add first files

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "The natural occurring substance malonic acid was first discovered in beetroots. Even though is was first prepared in 1858 [1], its relevance in todays market is not declining. Malonic acid is traditionally produced synthetically from nonrenewable petroleum feedstock. During this process ester groups have to be added using an alcohol (Hildbrand, 2001). Using non renewable resources is neither environmentally friendly, nor will it be financially lucrative in the future. The company Lygos Inc. has therefore developed a patented method to produce malonic acid through fermentation of genetically modified *Pichia Kudriavzevii* yeast cells (Peters, 2018). These efforts have been taken on due to the vast amount of uses for malonic acid in modern industry.\n",
     "\n",
-    "![Malonic acid](img/malonic_acid.png)\n",
+    "\n",
+    "![Malonic acid](img/malonic_acid.png \"Malonic acid\")\n",
     "\n",
     "*Figure 1*:  Molecular Structure of Malonic Acid.\n",
     "\n",
@@ -60,9 +61,10 @@
     "#### 1.2.1 Introduction to Komagataella phaffii\n",
     "The organism chosen as a cell chassis in this report is the methylotrophic yeast _Komagataella phaffii_, also know under its outdated name _Pichia Pastoris_, which is still often used in applied sciences. The genus _Komagataella_ comprises of 7 species, of which _K. phaffii_ and _K. pastoris_ are most used and only ones that have been studied in detail. (Heistinger 2020).\n",
     "\n",
-    "![Komagataella phaffii](img/komagataella_phaffii.png)\n",
     "\n",
-    "*K phaffii*:  _K phaffii_ Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/"
+    "<img src=\"img/komagataella_phaffii.png\" width=\"800\" />\n",
+    "\n",
+    "*K phaffii*: Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/"
    ]
   },
   {
@@ -100,21 +102,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. *If Project category I:* Reconstruction of a new GSM for your cell factory host of interest (<1500 words)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "or"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. *If Project category II:* Selection and assessment of existing GSM (<500 words)"
+    "## 3. Selection and assessment of existing GSM (<500 words)\n",
+    "\n",
+    "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0148031). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality.\n",
+    "\n"
    ]
   },
   {
