Try file linking options

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -23,7 +23,7 @@
     "The natural occurring substance malonic acid was first discovered in beetroots. Even though is was first prepared in 1858 [1], its relevance in todays market is not declining. Malonic acid is traditionally produced synthetically from nonrenewable petroleum feedstock. During this process ester groups have to be added using an alcohol (Hildbrand, 2001). Using non renewable resources is neither environmentally friendly, nor will it be financially lucrative in the future. The company Lygos Inc. has therefore developed a patented method to produce malonic acid through fermentation of genetically modified *Pichia Kudriavzevii* yeast cells (Peters, 2018). These efforts have been taken on due to the vast amount of uses for malonic acid in modern industry.\n",
     "\n",
     "\n",
-    "![Malonic acid](/img/malonic_acid.png \"Malonic acid\")\n",
+    "![Malonic acid](img/malonic_acid.png \"Malonic acid\")\n",
     "\n",
     "*Figure 1*:  Molecular Structure of Malonic Acid.\n",
     "\n",
@@ -34,17 +34,13 @@
     "\n",
     "[1]: 1911 Encyclopædia Britannica/Malonic Acid [https://en.wikisource.org/wiki/1911_Encyclop%C3%A6dia_Britannica/Malonic_Acid]\n",
     "\n",
-    "Hildbrand, S.; Pollak, P. Malonic Acid & Derivatives. March 15, 2001. Ullmann's Encyclopedia of Industrial Chemistry [http://dx.doi.org/10.1002/14356007.a16_063.pub2]\n",
-    "\n",
     " Peters, 2018\n",
     "\n",
     "[4]: Transparency Market Research [https://www.transparencymarketresearch.com/malonic-acid-market.html]\n",
     "\n",
     "[5]: https://www.wboc.com/story/44796231/malonic-acid-market-2021-comprehensive-report-demand-analysis-with-covid-19-impact-industry-size-latest-trend-analysis-impact-of-covid-19-top-players\n",
     "\n",
-    "[6]: Werpy, Todd A.; Holladay, John E.; White, James F. (August 2004). [https://www.pnnl.gov/main/publications/external/technical_reports/PNNL-14808.pdf]\n",
-    "\n",
-    "Miao, L., Li, Y. & Zhu, T. Metabolic engineering of methylotrophic Pichia pastoris for the production of β-alanine. Bioresour. Bioprocess. 8, 89 (2021). https://doi.org/10.1186/s40643-021-00444-9 Titel anhand dieser DOI in Citavi-Projekt übernehmen"
+    "[6]: Werpy, Todd A.; Holladay, John E.; White, James F. (August 2004). [https://www.pnnl.gov/main/publications/external/technical_reports/PNNL-14808.pdf]\n"
    ]
   },
   {
@@ -61,8 +57,7 @@
     "#### 1.2.1 Introduction to Komagataella phaffii\n",
     "The organism chosen as a cell chassis in this report is the methylotrophic yeast _Komagataella phaffii_, also know under its outdated name _Pichia Pastoris_, which is still often used in applied sciences. The genus _Komagataella_ comprises of 7 species, of which _K. phaffii_ and _K. pastoris_ are most used and only ones that have been studied in detail. (Heistinger 2020).\n",
     "\n",
-    "\n",
-    "<img src=\"img/komagataella_phaffii.png\" width=\"800\" />\n",
+    "![Komagataella phaffii](img/komagataella_phaffii.png \"Komagataella phaffii\")\n",
     "\n",
     "*K phaffii*: Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/"
    ]
@@ -104,11 +99,13 @@
    "source": [
     "## 3. Selection and assessment of existing GSM (<500 words)\n",
     "\n",
-    "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0148031). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality.\n",
+    "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality.\n",
     "\n",
     "[reports/PpaMBEL1254.html](PpaMBEL1254.html)\n",
     "\n",
-    "There has since been improvements and reconstructions of these three models. Among others was on update from 2016 for more accurate predictions to native and humanized glycosylation of recombinant proteins. https://pubmed.ncbi.nlm.nih.gov/26480251/). Here, the number of metabolites and reactions were increased to 1443 and 1595 respectively and mass balance was improved with 19.7% (cf. memote reports). In 2016 the three models were also merged together, to form the model iMT1026 (https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0148031). This model was later improved for better predictions of growth on methanol (https://pubmed.ncbi.nlm.nih.gov/29160039/) iMT1026.V3 which is relevant for our case study. The reconstruction tools CarveMe and KBase was also experimented with. While CarveMe yields impressive memote results, including correct annotation that iMT1026 lacks, it produces a model with only three compartments which is not representative for a fungal organism such as P. Pastoris. After a lot of effort, Kbase was successfully used to create a fungal model from the K. phaffii refseq from NCBI. The memote results were however not very promising. A script was set up to test if the two models predicted growth on the minimal medium proposed in (https://pubmed.ncbi.nlm.nih.gov/29160039/) with methanol as sole carbon source. It was not possible for either. Collecting the non-carbon medium components necessary for growth and adding that to the base medium, allowed the CarveMe model to have small but positive growth rates while the Kbase model still could not utilize methanol. Finally, iMT1026.V3 was selected for our project as it represents some of the most recent advancement in the P. pastoris reconstruction field and has been validated experimentally for growth on methanol. It, hopefully, implies that the mechanisms of the central metabolism have been accurately replicated. The introduction of malonate producing pathways mostly relies on this metabolic regime being representative, since the reactions do not branch far away from the central metabolism. The model only gets an overall memote score of 19%, but this is due to missing annotation and charge balancing. It has 100% metabolite connectivity and 90.6% mass balancing and should be able to produce reliable predictions to some extent. A concern however arises from the missing charge balance, causing errors in the non-growth associated maintenance reaction. It is known that maintenance becomes more relevant for low growth rates in fermentation and genetically engineered P. pastoris growing on methanol is expected to be quite slow. Hopefully, this will not influence the results too much but should nonetheless be kept in mind."
+    "[PpaMBEL1254](reports/PpaMBEL1254.html)\n",
+    "\n",
+    "There has since been improvements and reconstructions of these three models. Among others was on update from 2016 for more accurate predictions to native and humanized glycosylation of recombinant proteins(Irani, 2015). Here, the number of metabolites and reactions were increased to 1443 and 1595 respectively and mass balance was improved with 19.7% (cf. memote reports). In 2016 the three models were also merged together, to form the model iMT1026 (Tomàs-Gamisans, 2016). This model was later improved for better predictions of growth on methanol (Tomàs-Gamisans, 2017) iMT1026.V3 which is relevant for our case study. The reconstruction tools CarveMe and KBase was also experimented with. While CarveMe yields impressive memote results, including correct annotation that iMT1026 lacks, it produces a model with only three compartments which is not representative for a fungal organism such as P. Pastoris. After a lot of effort, Kbase was successfully used to create a fungal model from the K. phaffii refseq from NCBI. The memote results were however not very promising. A script was set up to test if the two models predicted growth on the minimal medium proposed in (Tomàs-Gamisans, 2017) with methanol as sole carbon source. It was not possible for either. Collecting the non-carbon medium components necessary for growth and adding that to the base medium, allowed the CarveMe model to have small but positive growth rates while the Kbase model still could not utilize methanol. Finally, iMT1026.V3 was selected for our project as it represents some of the most recent advancement in the P. pastoris reconstruction field and has been validated experimentally for growth on methanol. It, hopefully, implies that the mechanisms of the central metabolism have been accurately replicated. The introduction of malonate producing pathways mostly relies on this metabolic regime being representative, since the reactions do not branch far away from the central metabolism. The model only gets an overall memote score of 19%, but this is due to missing annotation and charge balancing. It has 100% metabolite connectivity and 90.6% mass balancing and should be able to produce reliable predictions to some extent. A concern however arises from the missing charge balance, causing errors in the non-growth associated maintenance reaction. It is known that maintenance becomes more relevant for low growth rates in fermentation and genetically engineered P. pastoris growing on methanol is expected to be quite slow. Hopefully, this will not influence the results too much but should nonetheless be kept in mind."
    ]
   },
   {
@@ -144,7 +141,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Tomàs-Gamisans, M., Ferrer, P., & Albiol, J. (2016). Integration and Validation of the Genome-Scale Metabolic Models of Pichia pastoris: A Comprehensive Update of Protein Glycosylation Pathways, Lipid and Energy Metabolism. PLOS ONE, 11(1), e0148031. doi: 10.1371/journal.pone.0148031\n",
+    "\n",
+    "Irani, Z., Kerkhoven, E., Shojaosadati, S., & Nielsen, J. (2015). Genome-scale metabolic model of Pichia pastoris with native and humanized glycosylation of recombinant proteins. Biotechnology And Bioengineering, 113(5), 961-969. doi: 10.1002/bit.25863\n",
+    "\n",
+    "Tomàs-Gamisans, M., Ferrer, P., & Albiol, J. (2017). Fine-tuning the P. pastoris iMT1026 genome-scale metabolic model for improved prediction of growth on methanol or glycerol as sole carbon sources. Microbial Biotechnology, 11(1), 224-237. doi: 10.1111/1751-7915.12871\n",
+    "\n",
+    "Miao, L., Li, Y., & Zhu, T. (2021). Metabolic engineering of methylotrophic Pichia pastoris for the production of β-alanine. Bioresources And Bioprocessing, 8(1). doi: 10.1186/s40643-021-00444-9\n",
+    "\n",
+    "Hildbrand, S., & Pollak, P. (2001). Malonic Acid and Derivatives. Ullmann's Encyclopedia Of Industrial Chemistry. doi: 10.1002/14356007.a16_063\n"
+   ]
   }
  ],
  "metadata": {
