--- a/Report.ipynb
+++ b/Report.ipynb
@@ -57,6 +57,8 @@
     "#### 1.2.1 Introduction to Komagataella phaffii\n",
     "The organism chosen as a cell chassis in this report is the methylotrophic yeast _Komagataella phaffii_, also know under its outdated name _Pichia Pastoris_, which is still often used in applied sciences. The genus _Komagataella_ comprises of 7 species, of which _K. phaffii_ and _K. pastoris_ are most used and only ones that have been studied in detail. (Heistinger 2020).\n",
     "\n",
+    "![Komagataella phaffii weblink](https://raw.githubusercontent.com/27410/group-assignment-2021-group-8-malonic-acid-in-k-phaffii/reorganizer/img/komagataella_phaffii.png?token=AFITQ5UYSC7POD7R5XN3Z4TBTQADY \"Komagataella phaffii\")\n",
+    "\n",
     "![Komagataella phaffii](img/komagataella_phaffii.png \"Komagataella phaffii\")\n",
     "\n",
     "*K phaffii*: Source: https://www.hcp-detection.org/expression-systems-for-therapeutic-biopharmaceuticals/expression-system-pichia-pastoris/#prettyPhoto/0/"
@@ -101,9 +103,12 @@
     "\n",
     "For _Pichia Pastoris_, three GEM models were published between 2010-2012 which became the most complete and acknowledged models in literature at the time (Tomàs-Gamisans, 2016). We found all three, imported them through COBRA and ran tests on MEMOTE to check their quality.\n",
     "\n",
-    "[reports/PpaMBEL1254.html](PpaMBEL1254.html)\n",
-    "\n",
-    "[PpaMBEL1254](reports/PpaMBEL1254.html)\n",
+    "|                        | PpaMBEL1254 | iPP668 | iLC915 |\n",
+    "|------------------------|-------------|--------|--------|\n",
+    "| Number of metabolites  | 1058        | 1178   | 2301   |\n",
+    "| Number of reactions    | 1254        | 1361   | 1506   |\n",
+    "| Number of compartments | 1           | 8      | 8      |\n",
+    "| Memote overall score   | 19%         | 20%    | 27%    |\n",
     "\n",
     "There has since been improvements and reconstructions of these three models. Among others was on update from 2016 for more accurate predictions to native and humanized glycosylation of recombinant proteins(Irani, 2015). Here, the number of metabolites and reactions were increased to 1443 and 1595 respectively and mass balance was improved with 19.7% (cf. memote reports). In 2016 the three models were also merged together, to form the model iMT1026 (Tomàs-Gamisans, 2016). This model was later improved for better predictions of growth on methanol (Tomàs-Gamisans, 2017) iMT1026.V3 which is relevant for our case study. The reconstruction tools CarveMe and KBase was also experimented with. While CarveMe yields impressive memote results, including correct annotation that iMT1026 lacks, it produces a model with only three compartments which is not representative for a fungal organism such as P. Pastoris. After a lot of effort, Kbase was successfully used to create a fungal model from the K. phaffii refseq from NCBI. The memote results were however not very promising. A script was set up to test if the two models predicted growth on the minimal medium proposed in (Tomàs-Gamisans, 2017) with methanol as sole carbon source. It was not possible for either. Collecting the non-carbon medium components necessary for growth and adding that to the base medium, allowed the CarveMe model to have small but positive growth rates while the Kbase model still could not utilize methanol. Finally, iMT1026.V3 was selected for our project as it represents some of the most recent advancement in the P. pastoris reconstruction field and has been validated experimentally for growth on methanol. It, hopefully, implies that the mechanisms of the central metabolism have been accurately replicated. The introduction of malonate producing pathways mostly relies on this metabolic regime being representative, since the reactions do not branch far away from the central metabolism. The model only gets an overall memote score of 19%, but this is due to missing annotation and charge balancing. It has 100% metabolite connectivity and 90.6% mass balancing and should be able to produce reliable predictions to some extent. A concern however arises from the missing charge balance, causing errors in the non-growth associated maintenance reaction. It is known that maintenance becomes more relevant for low growth rates in fermentation and genetically engineered P. pastoris growing on methanol is expected to be quite slow. Hopefully, this will not influence the results too much but should nonetheless be kept in mind."
    ]
@@ -137,10 +142,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Tomàs-Gamisans, M., Ferrer, P., & Albiol, J. (2016). Integration and Validation of the Genome-Scale Metabolic Models of Pichia pastoris: A Comprehensive Update of Protein Glycosylation Pathways, Lipid and Energy Metabolism. PLOS ONE, 11(1), e0148031. doi: 10.1371/journal.pone.0148031\n",
     "\n",
